correct creation of tokens
